[gd_scene load_steps=13 format=3 uid="uid://dvik7v57h3mcf"]

[ext_resource type="PackedScene" uid="uid://j6dd7mgd0p3w" path="res://Scenes/Objects/Characters/Enemies/enemy.tscn" id="1_p5n53"]
[ext_resource type="Script" path="res://Scenes/Objects/Characters/Enemies/enemy_patrolling.gd" id="2_0h1ht"]
[ext_resource type="Texture2D" uid="uid://cnjoqd3xmo1p4" path="res://Resources/Textures/Characters/Enemies/Frog_Idle.png" id="3_jybc7"]
[ext_resource type="PackedScene" uid="uid://d4hvse6k4r8rh" path="res://Scenes/Objects/debug_vars_visualizer.tscn" id="4_qxwfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mm7tx"]
size = Vector2(22, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bbuj"]
size = Vector2(24, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_p67sw"]
atlas = ExtResource("3_jybc7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5c1d"]
atlas = ExtResource("3_jybc7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mycop"]
atlas = ExtResource("3_jybc7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u5vh"]
atlas = ExtResource("3_jybc7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sdn57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p67sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5c1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mycop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u5vh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkwai"]
size = Vector2(800, 30)

[node name="EnemyPatrolling" instance=ExtResource("1_p5n53")]
script = ExtResource("2_0h1ht")
_wander_speed = 50.0
_is_charger = false
_charge_speed = 100.0

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_mm7tx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_6bbuj")

[node name="Sprite" type="AnimatedSprite2D" parent="." index="2"]
sprite_frames = SubResource("SpriteFrames_sdn57")
autoplay = "default"

[node name="Detectors" type="Node2D" parent="." index="3"]

[node name="GapDetectLeft" type="RayCast2D" parent="Detectors" index="0"]
position = Vector2(-17, 0)
target_position = Vector2(0, 18)
collision_mask = 2

[node name="GapDetectRight" type="RayCast2D" parent="Detectors" index="1"]
position = Vector2(17, 0)
target_position = Vector2(0, 18)
collision_mask = 2

[node name="ObstacleDetectLeft" type="RayCast2D" parent="Detectors" index="2"]
target_position = Vector2(-16, 0)
collision_mask = 2

[node name="ObstacleDetectRight" type="RayCast2D" parent="Detectors" index="3"]
target_position = Vector2(16, 0)
collision_mask = 2

[node name="PlayerDetection" type="Area2D" parent="Detectors" index="4"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/PlayerDetection" index="0"]
visible = false
shape = SubResource("RectangleShape2D_bkwai")

[node name="DebugVarsVisualizer" parent="." index="5" instance=ExtResource("4_qxwfe")]
offset_left = 20.0
offset_top = -15.0
offset_right = 28.0
offset_bottom = -7.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

[connection signal="body_entered" from="Detectors/PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Detectors/PlayerDetection" to="." method="_on_player_detection_body_exited"]
